out.log
Waf: Entering directory `/home/limemnghui/ns-allinone-3.27/ns-3.27/build'
[2321/2713] Compiling scratch/backup_2.cc
../scratch/backup_2.cc: In function ‘int main(int, char**)’:
../scratch/backup_2.cc:131:65: error: no matching function for call to ‘ns3::OnOffHelper::Install(std::pair<ns3::Ptr<ns3::Ipv4>, unsigned int>)’
     ApplicationContainer apps1 = onOff1.Install( Satip_1.Get(1) );
                                                                 ^
In file included from ./ns3/applications-module.h:13:0,
                 from ../scratch/backup_2.cc:4:
./ns3/on-off-helper.h:83:24: note: candidate: ns3::ApplicationContainer ns3::OnOffHelper::Install(ns3::NodeContainer) const
   ApplicationContainer Install (NodeContainer c) const;
                        ^~~~~~~
./ns3/on-off-helper.h:83:24: note:   no known conversion for argument 1 from ‘std::pair<ns3::Ptr<ns3::Ipv4>, unsigned int>’ to ‘ns3::NodeContainer’
./ns3/on-off-helper.h:92:24: note: candidate: ns3::ApplicationContainer ns3::OnOffHelper::Install(ns3::Ptr<ns3::Node>) const
   ApplicationContainer Install (Ptr<Node> node) const;
                        ^~~~~~~
./ns3/on-off-helper.h:92:24: note:   no known conversion for argument 1 from ‘std::pair<ns3::Ptr<ns3::Ipv4>, unsigned int>’ to ‘ns3::Ptr<ns3::Node>’
./ns3/on-off-helper.h:101:24: note: candidate: ns3::ApplicationContainer ns3::OnOffHelper::Install(std::__cxx11::string) const
   ApplicationContainer Install (std::string nodeName) const;
                        ^~~~~~~
./ns3/on-off-helper.h:101:24: note:   no known conversion for argument 1 from ‘std::pair<ns3::Ptr<ns3::Ipv4>, unsigned int>’ to ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’

Waf: Leaving directory `/home/limemnghui/ns-allinone-3.27/ns-3.27/build'
Build failed
 -> task in 'backup_2' failed (exit status 1): 
	{task 140200343259216: cxx backup_2.cc -> backup_2.cc.1.o}
['/usr/bin/g++', '-O0', '-ggdb', '-g3', '-Wall', '-Werror', '-std=c++11', '-Wno-error=deprecated-declarations', '-fstrict-aliasing', '-Wstrict-aliasing', '-pthread', '-pthread', '-I.', '-I..', '-I/usr/include/gtk-2.0', '-I/usr/lib/x86_64-linux-gnu/gtk-2.0/include', '-I/usr/include/gio-unix-2.0', '-I/usr/include/cairo', '-I/usr/include/pango-1.0', '-I/usr/include/atk-1.0', '-I/usr/include/pixman-1', '-I/usr/include/gdk-pixbuf-2.0', '-I/usr/include/libpng16', '-I/usr/include/harfbuzz', '-I/usr/include/glib-2.0', '-I/usr/lib/x86_64-linux-gnu/glib-2.0/include', '-I/usr/include/fribidi', '-I/usr/include/uuid', '-I/usr/include/freetype2', '-I/usr/include/libxml2', '-DNS3_BUILD_PROFILE_DEBUG', '-DNS3_ASSERT_ENABLE', '-DNS3_LOG_ENABLE', '-DHAVE_SYS_IOCTL_H=1', '-DHAVE_IF_NETS_H=1', '-DHAVE_NET_ETHERNET_H=1', '-DHAVE_PACKET_H=1', '-DHAVE_IF_TUN_H=1', '-DHAVE_=1', '-DHAVE_GSL=1', '-DHAVE_SQLITE3=1', '-DHAVE_GTK2=1', '-DHAVE_LIBXML2=1', '../scratch/backup_2.cc', '-c', '-o', '/home/limemnghui/ns-allinone-3.27/ns-3.27/build/scratch/backup_2.cc.1.o']
